Worked fine. Now trying to implement the click event.

--- a/ThirdCppWinRTAppv3/CalcButton.xaml
+++ b/ThirdCppWinRTAppv3/CalcButton.xaml
@@ -9,15 +9,23 @@
     mc:Ignorable="d">
 
     <UserControl.Resources>
-        
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ms-appx:///themes/generic.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </UserControl.Resources>
 
-    <StackPanel x:Name="CalcButton" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Button x:Name="myButton" Click="myButton_Click" Background="{x:Bind ButtonBackground, Mode=OneWay}">
-            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <TextBlock x:Name="Top" Text="{x:Bind TopText, Mode=OneWay}" Foreground="{x:Bind TopForeground, Mode=OneWay}" />
-                <TextBlock x:Name="Bottom" Text="{x:Bind BottomText, Mode=OneWay}" Foreground="{x:Bind BottomForeground, Mode=OneWay}" />
-            </StackPanel>
-        </Button>
-    </StackPanel>
+    <Button x:Name="CalcButton" Click="MyCalcButton_Click" Background="{x:Bind ButtonBackground, Mode=OneWay}"
+            HorizontalAlignment="Center" VerticalAlignment="Stretch" Width="60" MinHeight="60">
+        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Stretch">
+            <TextBlock x:Name="Top" Text="{x:Bind TopText, Mode=OneWay}"
+                       HorizontalAlignment="Center"
+                           Foreground="{x:Bind TopForeground, Mode=OneWay}"
+                           FontWeight="{x:Bind TopFontWeight, Mode=OneWay}" />
+            <TextBlock x:Name="Bottom" Text="{x:Bind BottomText, Mode=OneWay}"
+                           Foreground="{x:Bind BottomForeground, Mode=OneWay}"
+                           FontWeight="{x:Bind BottomFontWeight, Mode=OneWay}" />
+        </StackPanel>
+    </Button>
 </UserControl>
